--- a/back-end/view/index.html
+++ b/back-end/view/index.html
@@ -71,20 +71,20 @@
                                     </div>
                                     <div class="collapse navigation navbar-collapse navbar-ex1-collapse remove-space">
                                         <ul class="list-unstyled nav1 cl-effect-10">
-                                            <li><a  data-hover="Home" class="active"><span>Home</span></a></li>
-                                            <li><a data-hover="About"  href="about.html"><span>About</span></a></li>
-                                            <li><a data-hover="Rooms"  href="rooms.html"><span>Rooms</span></a></li>
-                                            <li><a data-hover="Gallery"  href="gallery.html"><span>Gallery</span></a></li>
-                                            <li><a data-hover="Dinning" href="dinning.html"><span>Dinning</span></a></li>
+                                            <li><a  data-hover="首页" class="active"><span>首页</span></a></li>
+                                            <li><a data-hover="目的地"  href="about.html"><span>目的地</span></a></li>
+                                            <li><a data-hover="旅游攻略"  href="rooms.html"><span>旅游攻略</span></a></li>
+                                            <li><a data-hover="旅行商店"  href="gallery.html"><span>旅行商店</span></a></li>
+                                            <li><a data-hover="酒店" href="dinning.html"><span>酒店</span></a></li>
                                             <li><a data-hover="News" href="news.html"><span>News</span></a></li>
-                                            <li><a data-hover="Contact Us" href="contact.html"><span>contact Us</span></a></li>
+                                            <li><a data-hover="帮助" href="contact.html"><span>帮助</span></a></li>
                                         </ul>
 
                                     </div>
                                 </nav>
                             </div>
                             <div class="col-md-2  col-sm-4 col-xs-12 hidden-sm">
-                                <div class="text-right"><button type="button" class="book-now-btn">Book Now</button></div>
+                                <div class="text-right"><button type="button" class="book-now-btn">制定行程</button></div>
                             </div>
                         </div>
                     </div>
@@ -104,17 +104,17 @@
                 <div class="carousel-inner">
                     <div class="item active"> <img src="images/banner.png" style="width:100%; height: 500px" alt="First slide">
                         <div class="carousel-caption">
-                            <h1>vacayhome<br> spa & Resort</h1>
+                            <h1>西亚<br> 好玩</h1>
                         </div>
                     </div>
                     <div class="item"> <img src="images/banner2.png" style="width:100%; height: 500px" alt="Second slide">
                         <div class="carousel-caption">
-                            <h1>vacayhome<br> spa & Resort</h1>
+                            <h1>东亚<br> 便宜</h1>
                         </div>
                     </div>
                     <div class="item"> <img src="images/banner3.png" style="width:100%; height: 500px" alt="Third slide">
                         <div class="carousel-caption">
-                            <h1>vacayhome<br> spa & Resort</h1>
+                            <h1>中亚<br> 亲切</h1>
                         </div>
                     </div>
 
@@ -134,7 +134,7 @@
                                 <div class="service-image">
                                     <img alt="image" class="img-responsive" src="images/icons/wifi.png">
                                 </div>
-                                <h4><a>free wifi</a></h4>
+                                <h4><a>周边游</a></h4>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-3 col-xs-6 width-50">
@@ -142,7 +142,7 @@
                                 <div class="service-image">
                                     <img alt="image" class="img-responsive" src="images/icons/key.png">
                                 </div>
-                                <h4><a>room service</a></h4>
+                                <h4><a>找美食</a></h4>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-3 col-xs-6 mt-25">
@@ -150,7 +150,7 @@
                                 <div class="service-image">
                                     <img alt="image" class="img-responsive" src="images/icons/car.png">
                                 </div>
-                                <h4><a>free parking</a></h4>
+                                <h4><a>看攻略</a></h4>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-3 col-xs-6 mt-25">
@@ -158,7 +158,7 @@
                                 <div class="service-image">
                                     <img alt="image" class="img-responsive" src="images/icons/user.png">
                                 </div>
-                                <h4><a>customer support</a></h4>
+                                <h4><a>订门票</a></h4>
                             </div>
                         </div>
                     </div>
@@ -174,7 +174,7 @@
                                 <img class="img-responsive" src="images/room1.png">
                                 <div class="overlay">
                                     <a class="info pop example-image-link img-responsive" href="images/room1.png" data-lightbox="example-1"><i class="fa fa-search" aria-hidden="true"></i></a>
-                                    <p><a>delux room</a></p>
+                                    <p><a>自然景观</a></p>
                                 </div>
                             </div>
                         </div>
@@ -183,7 +183,7 @@
                                 <img class="img-responsive" src="images/room2.png">
                                 <div class="overlay">
                                     <a class="info pop example-image-link img-responsive" href="images/room2.png" data-lightbox="example-1"><i class="fa fa-search" aria-hidden="true"></i></a>
-                                    <p><a>super room</a></p>
+                                    <p><a>历史古迹</a></p>
                                 </div>
                             </div>
                         </div>
@@ -192,7 +192,7 @@
                                 <img class="img-responsive" src="images/room3.png">
                                 <div class="overlay">
                                     <a class="info pop example-image-link img-responsive" href="images/room3.png" data-lightbox="example-1"><i class="fa fa-search" aria-hidden="true"></i></a>
-                                    <p><a>single room</a></p>
+                                    <p><a>城市亮点</a></p>
                                 </div>
                             </div>
                         </div>
@@ -201,7 +201,7 @@
                                 <img class="img-responsive" src="images/room4.png">
                                 <div class="overlay">
                                     <a class="info pop example-image-link img-responsive" href="images/room4.png" data-lightbox="example-1"><i class="fa fa-search" aria-hidden="true"></i></a>
-                                    <p><a>double room</a></p>
+                                    <p><a>刺激项目</a></p>
                                 </div>
                             </div>
                         </div>
@@ -216,9 +216,9 @@
                         <div class="row">
                             <div class="col-md-5 col-sm-6 col-xs-12">
                                 <div class="vacation-offer-details">
-                                    <h1>Your vacation Awaits</h1>
-                                    <h4>Lorem ipsum dolor sit amet, conse ctetuer adipiscing elit.</h4>
-                                    <button type="button" class="btn btn-default">Choose a package</button>
+                                    <h1>折上折</h1>
+                                    <h4>10人参团更优惠</h4>
+                                    <button type="button" class="btn btn-default">点击查看详情</button>
                                 </div>
                             </div>
                         </div>
