--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <script type=""></script>
+    <script type="text/javascript" src="./js/test.all.js"></script>
 </head>
 <body>
  <div id="root"></div>
